--- a/style.css
+++ b/style.css
@@ -54,3 +54,10 @@ body {
 .hidden {
   display: none;
 }
+.powerup {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: url("assets/powerup.png") no-repeat center/contain;
+  filter: drop-shadow(0 0 6px cyan);
+}
