--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ body {
 #topbar { top: 0; }
 #footer {
   bottom: 0;
+  justify-content: center;
   font-size: 12px;
   opacity: 0.6;
-  justify-content: center;
 }
 
 /* GAME AREA */
@@ -42,13 +42,14 @@ body {
   overflow: hidden;
 }
 
+/* SCORE */
 #score {
   position: absolute;
   top: 10px;
   left: 10px;
 }
 
-/* PLAYER (with fallback color) */
+/* PLAYER (SAFE STATIC IMAGE) */
 #player {
   position: absolute;
   left: 50px;
@@ -56,20 +57,11 @@ body {
   width: 96px;
   height: 96px;
 
-  background-color: #58a6ff; /* fallback if image fails */
-  background-image: url("./assets/player-run.png");
+  background-color: #58a6ff; /* fallback */
+  background-image: url("./assets/player.png");
+  background-size: contain;
   background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-
-/* RUN ANIMATION */
-#player.running {
-  animation: runAnim 0.6s steps(6) infinite;
-}
-
-@keyframes runAnim {
-  from { background-position: 0 0; }
-  to { background-position: -576px 0; }
+  background-position: center;
 }
 
 /* BUG */
@@ -79,10 +71,11 @@ body {
   width: 48px;
   height: 48px;
 
-  background-color: #ff5555;
+  background-color: #ff4d4d;
   background-image: url("./assets/bug.png");
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* POWER-UP */
@@ -95,6 +88,8 @@ body {
   background-image: url("./assets/powerup.png");
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
+
   filter: drop-shadow(0 0 6px red);
 }
 
